[package]
name = "discord-fs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
dotenv = "0.15.0"
once_cell = "1.13.1"
serenity = "0.11.5"
tokio = "1.20.1"
